Bug 327569 - Experimental brush engine don't display any outline or cursor on canvas
Summary: Experimental brush engine don't display any outline or cursor on canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR grave
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-13 17:34 UTC by David REVOY
Modified: 2013-11-14 10:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2013-11-13 17:34:09 UTC
Experimental brush engine ( also known for the simili Al.chemy style effect ) lost outliner , or feedback on canvas. ( no cursor ). 
Affect openGL and Qpainter canvas. 

workaround : switch to another outline display for the time of usage.
Comment 1 Dmitry Kazakov 2013-11-14 09:47:58 UTC
That is cause by my recent refactoring, I guess. :( Curve Brush is also affected.
Comment 2 Dmitry Kazakov 2013-11-14 09:49:45 UTC
As well as Dyna Brush and a Particle Brush.
Comment 3 Dmitry Kazakov 2013-11-14 10:04:10 UTC
Git commit cfb83bdf36f1098f5ac6a637686d918df205512c by Dmitry Kazakov.
Committed on 14/11/2013 at 10:03.
Pushed by dkazakov into branch 'master'.

Fix the outline of the tools that do not provide one

M  +1    -1    krita/image/brushengine/kis_paintop_settings.cpp

http://commits.kde.org/calligra/cfb83bdf36f1098f5ac6a637686d918df205512c