Fix the outline of the tools that do not provide one

BUG:327569